--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 description = ""
 authors = ["maxus <maxus.info.mail@gmail.com>"]
 readme = "README.md"
-packages = [{ include = "./NeuroPlaySDK/Python" }]
+packages = [{ include = "./NeuroPlaySDK" }]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
 requests = "*"
 pyside6 = "^6.4.0"
-NeuroPlay = { path = "./NeuroPlaySDK/Python" }
+NeuroPlay = { path = "./NeuroPlaySDK" }
 
 [build-system]
 requires = ["poetry-core"]
