Removed submodules + hopefully fixed everything

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-certifi==2022.9.24 ; python_version >= "3.9" and python_version < "3.11"
+certifi==2022.12.7 ; python_version >= "3.9" and python_version < "3.11"
 charset-normalizer==2.1.1 ; python_version >= "3.9" and python_version < "3.11"
 contourpy==1.0.6 ; python_version >= "3.9" and python_version < "3.11"
-cycler==0.11.0 ; python_version >= "3.9" and python_version < "3.11" 
+cycler==0.11.0 ; python_version >= "3.9" and python_version < "3.11"
 fonttools==4.38.0 ; python_version >= "3.9" and python_version < "3.11"
-idna==3.4 ; python_version >= "3.9" and python_version < "3.11" 
-kiwisolver==1.4.4 ; python_version >= "3.9" and python_version < "3.11" 
-matplotlib==3.6.2 ; python_version >= "3.9" and python_version < "3.11" 
-./NeuroPlaySDK ; python_version >= "3.9" and python_version < "3.11"
-numpy==1.23.5 ; python_version >= "3.9" and python_version < "3.11" 
-packaging==21.3 ; python_version >= "3.9" and python_version < "3.11" 
+idna==3.4 ; python_version >= "3.9" and python_version < "3.11"
+kiwisolver==1.4.4 ; python_version >= "3.9" and python_version < "3.11"
+matplotlib==3.6.2 ; python_version >= "3.9" and python_version < "3.11"
+neuroplay @ file:///home/maxus/Projects/neuroboard/NeuroPlaySDK ; python_version >= "3.9" and python_version < "3.11"
+numpy==1.23.5 ; python_version >= "3.9" and python_version < "3.11"
+packaging==22.0 ; python_version >= "3.9" and python_version < "3.11"
 pillow==9.3.0 ; python_version >= "3.9" and python_version < "3.11"
 pyparsing==3.0.9 ; python_version >= "3.9" and python_version < "3.11"
 pyside6-addons==6.4.1 ; python_version >= "3.9" and python_version < "3.11"
@@ -16,10 +16,10 @@ pyside6-essentials==6.4.1 ; python_version >= "3.9" and python_version < "3.11"
 pyside6==6.4.1 ; python_version >= "3.9" and python_version < "3.11"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "3.11"
 requests==2.28.1 ; python_version >= "3.9" and python_version < "3.11"
-setuptools-scm==7.0.5 ; python_version >= "3.9" and python_version < "3.11" 
-setuptools==65.6.3 ; python_version >= "3.9" and python_version < "3.11" 
+setuptools-scm==7.0.5 ; python_version >= "3.9" and python_version < "3.11"
+setuptools==65.6.3 ; python_version >= "3.9" and python_version < "3.11"
 shiboken6==6.4.1 ; python_version >= "3.9" and python_version < "3.11"
-six==1.16.0 ; python_version >= "3.9" and python_version < "3.11" 
+six==1.16.0 ; python_version >= "3.9" and python_version < "3.11"
 tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.11"
-typing-extensions==4.4.0 ; python_version >= "3.9" and python_version < "3.11" 
-urllib3==1.26.13 ; python_version >= "3.9" and python_version < "3.11" 
+typing-extensions==4.4.0 ; python_version >= "3.9" and python_version < "3.11"
+urllib3==1.26.13 ; python_version >= "3.9" and python_version < "3.11"
