--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["maxus <maxus.info.mail@gmail.com>"]
 readme = "README.md"
-packages = [{ include = "./NeuroPlaySDK" }, { include = "./neuroboard" }]
+packages = [{ include = "./neuroplay" }, { include = "./neuroboard" }]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
@@ -12,7 +12,6 @@ requests = "*"
 numpy = "*"
 matplotlib = "*"
 pyside6 = "^6.4.0"
-NeuroPlay = { path = "./NeuroPlaySDK" }
 
 [build-system]
 requires = ["poetry-core"]
