Change project structure + downgrade to Qt5

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,16 @@ version = "0.1.0"
 description = ""
 authors = ["maxus <maxus.info.mail@gmail.com>"]
 readme = "README.md"
-packages = [{ include = "./neuroplay" }, { include = "./neuroboard" }]
+
+[[tool.poetry.packages]]
+include = "./neuroboard"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
 requests = "*"
 numpy = "*"
 matplotlib = "*"
-pyside6 = "^6.4.0"
+pyside2 = "*"
 
 [build-system]
 requires = ["poetry-core"]
